--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    buildTypes.each {
+        it.buildConfigField 'String', 'SANDBOX_API_KEY', SANDBOX_API_KEY
+    }
 }
 
 ext.retrofitVersion = '2.4.0'
@@ -27,6 +31,7 @@ ext.rxJavaVersion = '2.1.12'
 ext.rxAndroidVersion = '2.1.1'
 ext.rxKotlinVersion = '2.3.0'
 ext.lifecycleVersion = '2.0.0'
+ext.materialComponentVersion = '1.1.0-alpha09'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -35,6 +40,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "com.google.android.material:material:$materialComponentVersion"
     //test
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
