--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,23 +31,24 @@ ext.retrofitVersion = '2.4.0'
 ext.rxJavaVersion = '2.1.12'
 ext.rxAndroidVersion = '2.1.1'
 ext.rxKotlinVersion = '2.3.0'
-ext.lifecycleVersion = '2.0.0'
-ext.materialComponentVersion = '1.1.0-alpha09'
+ext.lifecycleVersion = '2.1.0'
+ext.materialComponentVersion = '1.1.0-alpha10'
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     //core
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.2'
-    implementation 'androidx.core:core-ktx:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.core:core-ktx:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "com.google.android.material:material:$materialComponentVersion"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0-alpha02"
     //test
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     //dagger
-    implementation 'com.google.dagger:dagger:2.23.2'
+    implementation 'com.google.dagger:dagger:2.24'
     kapt 'com.google.dagger:dagger-compiler:2.23.2'
     //timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
@@ -70,4 +71,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-livedata:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-runtime:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:$lifecycleVersion"
+    //adapter
+    implementation "com.hannesdorfmann:adapterdelegates4:4.1.1"
 }
