make gradle settings

--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+apply from: 'dependencies.gradle'
 
 buildscript {
     ext.kotlin_version = '1.3.50'
-    ext.retrofitVersion = '2.4.0'
-    ext.rxJavaVersion = '2.1.12'
-    ext.rxAndroidVersion = '2.1.1'
-    ext.rxKotlinVersion = '2.3.0'
-    ext.lifecycleVersion = '2.1.0'
-    ext.materialComponentVersion = '1.1.0-alpha10'
 
     repositories {
         google()
@@ -27,6 +22,16 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+    }
+    ext {
+        compileSdkVersion = 29
+        minSdkVersion = 22
+        targetSdkVersion = 29
+        androidVersionCode = 1
+        androidVersionName = "1.0"
+        buildToolsVersion = "29.0.0"
+        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
+        applicationId = "andrey.murzin.cryptoapp"
     }
 }
 
