add glide in core-ui module

--- a/core-ui/build.gradle
+++ b/core-ui/build.gradle
@@ -47,4 +47,7 @@ dependencies {
     implementation androidDependency.lifecycleViewmodelKtx
     implementation androidDependency.lifecycleLivedata
     implementation androidDependency.lifecycleRuntime
+    //glide
+    implementation coreDependency.glide
+    kapt coreDependency.glideCompiler
 }
