--- a/feature-currency/src/main/AndroidManifest.xml
+++ b/feature-currency/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="andrey.murzin.screen_currency" />
+<manifest package="andrey.murzin.screen_currency" />
