--- a/feature-exchange/src/main/AndroidManifest.xml
+++ b/feature-exchange/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="andrey.murzin.feature_exchange" />
+<manifest package="andrey.murzin.feature_exchange" />
