--- a/repository/src/main/AndroidManifest.xml
+++ b/repository/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="andrey.murzin.repository" />
+<manifest package="andrey.murzin.repository" />
