--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -48,7 +48,9 @@ ext {
     testDependency = [
             "junit"   : 'junit:junit:4.12',
             "runner"  : 'androidx.test:runner:1.2.0',
-            "espresso": 'androidx.test.espresso:espresso-core:3.2.0'
+            "rules"   : 'androidx.test:rules:1.1.1',
+            "espresso": 'androidx.test.espresso:espresso-core:3.2.0',
+            "mockito" : 'org.mockito:mockito-core:1.10.19'
     ]
     uiDependencies = [
             "adapterdelegates": "com.hannesdorfmann:adapterdelegates4:4.1.1"
