add request to coin detail

--- a/injector/build.gradle
+++ b/injector/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     //module
     implementation project(':core')
     implementation project(':core-ui')
+    implementation project(':core-utils')
     implementation project(':screen-main')
     implementation project(':screen-bottomnav')
     implementation project(':repository')
