--- a/core-utils/build.gradle
+++ b/core-utils/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+
 android {
     def globalConfiguration = rootProject.extensions.getByName("ext")
 
@@ -22,34 +23,16 @@ android {
         }
     }
 
+    buildTypes.each {
+        it.buildConfigField 'String', 'SANDBOX_API_KEY', SANDBOX_API_KEY
+        it.buildConfigField('String', 'SANDBOX_BASE_URL', SANDBOX_BASE_URL)
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    def coreDependency = rootProject.ext.coreDependency
-    def androidDependency = rootProject.ext.androidDependency
-    def uiDependencies = rootProject.ext.uiDependencies
-
     implementation project(':core')
-    implementation project(':core-utils')
-    implementation project(':core-ui')
     //core
     implementation coreDependency.kotlin
     implementation androidDependency.appcompat
-    implementation androidDependency.material
-    implementation androidDependency.coreKtx
-    implementation androidDependency.constraintlayout
-    implementation androidDependency.swiperefreshlayout
-    //dagger
-    implementation coreDependency.dagger
-    kapt coreDependency.daggerCompiler
-    //cicerone
-    implementation coreDependency.cicerone
-    //rxJava2
-    implementation coreDependency.rxjava
-    implementation coreDependency.rxandroid
-    implementation coreDependency.rxkotlin
-    //adapter
-    implementation uiDependencies.adapterdelegates
 }
