route to purchase

--- a/core-utils/build.gradle
+++ b/core-utils/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     //core
     implementation coreDependency.kotlin
     implementation androidDependency.appcompat
+    //cicerone
+    implementation coreDependency.cicerone
 }
