--- a/screen-main/build.gradle
+++ b/screen-main/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation project(':core')
     implementation project(':core-ui')
     implementation project(':screen-bottomnav')
+    implementation project(':feature-purchase')
     //core
     implementation coreDependency.kotlin
     implementation androidDependency.appcompat
