--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':injector', ':core', ':repository', ':network', ':screen-main', ':core-ui', ':screen-bottomnav', ':feature-currency', ':feature-exchange', ':core-utils', ':feature-purchase'
+include ':injector', ':core', ':repository', ':network', ':screen-main', ':core-ui', ':screen-bottomnav', ':feature-currency', ':feature-exchange', ':core-utils', ':feature-purchase', ':feature-coin-info'
