--- a/feature-purchase/build.gradle
+++ b/feature-purchase/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 
     implementation project(':core')
     implementation project(':core-ui')
+    implementation project(':feature-coin-info')
     //core
     implementation coreDependency.kotlin
     implementation androidDependency.appcompat
